# cpp-linux-monitor-tui

./: .gitignore  CMakeLists.txt  README.md
.serena/: project.yml
docs/superpowers/plans/: 2026-04-15-ftxui-component-event-loop.md  2026-04-15-process-detail-pane.md  2026-04-17-catppuccin-mocha-theme.md  2026-04-17-personal-tools-platform.md  2026-04-17-process-sort-indicator.md  2026-04-30-ui-beautification.md
docs/superpowers/specs/: 2026-04-14-command-bar-execution-design.md  2026-04-15-ftxui-component-event-loop-design.md  2026-04-15-process-detail-pane-design.md  2026-04-15-process-detail-pane-runtime-design.md  2026-04-17-catppuccin-mocha-theme-design.md  2026-04-30-ui-beautification-design.md
src/: main.cpp
src/actions/: process_actions.cpp  process_actions.h
src/app/: app_config.h  application.cpp  application.h  sampling_worker.cpp  sampling_worker.h
src/collector/: cpu_collector.cpp  cpu_collector.h  disk_collector.cpp  disk_collector.h  memory_collector.cpp  memory_collector.h  network_collector.cpp  network_collector.h  process_collector.cpp  process_collector.h
src/model/: history_data.cpp  history_data.h  system_snapshot.h
src/store/: history_buffer.h  snapshot_store.cpp  snapshot_store.h
src/ui/: app_controller.cpp  app_controller.h  dashboard_view.cpp  dashboard_view.h  process_list.cpp  process_list.h  progress_bar.cpp  progress_bar.h  render_cache.cpp  render_cache.h  sparkline_chart.cpp  sparkline_chart.h  theme.h
tests/actions/: process_actions_test.cpp
tests/app/: app_config_test.cpp  application_test.cpp
tests/collector/: process_collector_test.cpp  system_collectors_test.cpp
tests/model/: history_data_test.cpp
tests/store/: snapshot_store_test.cpp
tests/ui/: app_controller_test.cpp  dashboard_view_test.cpp  process_list_test.cpp  progress_bar_test.cpp  sparkline_chart_test.cpp
